# Sekiro-Refresh-Rate-Fix

./: .clang-format  CMakeLists.txt  README.md
src/: d3d11.cpp  d3d11_device.hpp  dxgi.cpp  dxgi_adapter.hpp  dxgi_device.hpp  dxgi_factory.hpp  dxgi_swap_chain.hpp  logger.cpp  logger.hpp
